packages/components/src/combobox/ComboBox.module.css
.combobox {
  font-family: var(--midas-typography-font-family);
  display: flex;
  flex-direction: column;

  &[data-invalid] .inputField {
    border: 0.125rem solid var(--midas-support-border-warning);
  }
}

.inputField {
  box-sizing: border-box;
  width: -webkit-fill-available;
  padding-left: 1rem;
  border: none;
  border-bottom: 1px solid var(--midas-border-color-primary);
  border-radius: 0;
  font-size: 1rem;
  color: var(--midas-text-primary);
  height: var(--midas-size-control);
  background-color: var(--midas-field-01-base);

  @media (forced-colors: active) {
    border: 1px solid;
  }

  &.medium {
    height: var(--midas-size-control-md);
  }

  &[data-hovered],
  &:has(+ [data-hovered]) {
    background-color: var(--midas-field-01-hover);
  }

  &::placeholder {
    color: var(--midas-text-placeholder);
  }

  &:focus-visible,
  &[data-focus-visible] {
    outline: none;
  }

  &[data-focused],
  &[data-focus-visible] {
    box-shadow: var(--midas-state-focus);

    @media (forced-colors: active) {
      outline: 3px solid highlight;
      outline-offset: 2px;
    }
  }

  &[data-disabled] {
    color: var(--midas-text-disabled);
    background: var(--midas-field-disabled);
    box-shadow: none;
    border-bottom: 0.063rem solid var(--midas-border-color-disabled);
    cursor: not-allowed;
  }

  &[data-readonly] {
    background-color: transparent;
    border-color: var(--midas-border-color-subtle);

    &[data-focused],
    &[data-focus-visible] {
      box-shadow: none;
    }
  }
}

.text {
  font-size: 0.875rem;
  margin-bottom: 0.5rem;
}

.wrap {
  grid-area: Input;
  position: relative;
  gap: 0.5rem;
}

.button {
  display: flex;
  align-items: center;
  border: none;
  padding: var(--midas-space-70);
  color: var(--midas-icon-primary);
  background-color: transparent;
  position: absolute;
  top: 0;
  right: 0;
  height: var(--midas-size-control);
  transition: transform 0.3s ease;

  &.medium {
    height: var(--midas-size-control-md);
    padding: var(--midas-space-50) var(--midas-space-70);
  }

  &[aria-expanded='true'] {
    transform: rotate(180deg);
  }

  &[data-disabled] {
    cursor: not-allowed;
    color: var(--midas-icon-disabled);

    [data-readonly] & {
      color: var(--midas-icon-read-only);
    }
  }

  &[data-hovered] {
    cursor: pointer;
  }
}

.icon {
  display: flex;
  align-items: center;
  transition: transform 0.3s ease;
}

@media (prefers-reduced-motion) {
  .button,
  .icon {
    transition: none;
  }
}

